--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,29 +2,13 @@ spring.application.name=vegan-food-backend
 # Server Configuration
 server.port=8080
 
-# MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/vegan_food_db?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+# MySQL connection config
+spring.datasource.url=jdbc:mysql://localhost:3306/demo_1?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=Quanpro6
 
-# JPA/Hibernate Configuration
+# Hibernate JPA settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-# Connection Pool Configuration (HikariCP - default in Spring Boot)
-spring.datasource.hikari.connection-timeout=20000
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.idle-timeout=300000
-spring.datasource.hikari.max-lifetime=1200000
-
-# Logging Configuration
-logging.level.com.veganfood.veganfoodbackend=DEBUG
-logging.level.org.springframework.web=INFO
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.level.com.zaxxer.hikari=DEBUG
