--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
             <version>2.6.0</version>
         </dependency>
 
+        <!-- Spring Boot Security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
         <!-- Devtools (optional) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
