--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=vegan-food-backend
 server.port=8080
 
 # MySQL connection config
-spring.datasource.url=jdbc:mysql://root:QQdiLXaSBDRUDspHQPMCtHHYkkCTMtoq@shortline.proxy.rlwy.net:27668/railway
+spring.datasource.url=jdbc:mysql://localhost:3306/vegan?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=QQdiLXaSBDRUDspHQPMCtHHYkkCTMtoq
+spring.datasource.password=Quanpro6
 
 # Hibernate JPA settings
 spring.jpa.hibernate.ddl-auto=update
